[package]
name = "ruslink"
version = "0.3.1"
edition = "2021"
description = "A fast, modern Rust implementation of GNU Stow with built-in Git support"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/waldirborbaje/ruslink"
readme = "README.md"
keywords = ["stow", "dotfiles", "symlink", "cli", "git", "configuration"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.11"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
human-panic = "1.2"
pathdiff = "0.2"           # Crucial: relative symlinks

# Optional but recommended
colored = "2.1"            # For colored output in the future

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
