[package]
name = "ruslink"
version = "0.4.1"
edition = "2021"
description = "A fast, modern Rust implementation of GNU Stow with built-in Git support"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/waldirborbaje/ruslink"
readme = "README.md"
keywords = ["stow", "dotfiles", "symlink", "cli", "git", "configuration"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.11"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
human-panic = "2.0.8"
pathdiff = "0.2"
once_cell = "1.20"

# Dependências opcionais
colored = { version = "2.1", optional = true }
chrono = { version = "0.4", features = ["clock"], optional = true }

[dev-dependencies]
tempfile = "3.10"

[features]
# Features padrão (recomendado)
default = ["git", "colors"]

# Suporte a Git (commits, push, timestamps)
git = ["dep:chrono"]

# Cores no terminal (success, error, warning, etc.)
colors = ["dep:colored"]

# Build mínima (sem git e sem cores)
minimal = []

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
